@@ -11,6 +11,18 @@
             </property>
             <property name="visible">True</property>
         </object>
+
+        <object name="crop_image" meta_type="CMF Action" i18n:domain="eea">
+            <property name="title" i18n:translate="">Crop Image</property>
+            <property name="description" i18n:translate=""/>
+            <property name="url_expr">string:${globals_view/getCurrentObjectUrl}/@@crop</property>
+            <property name="available_expr">python:'Products.EEAContentTypes.content.interfaces.IExternalHighlight' or 'Products.ATContentTypes.interfaces.image.IATImage'  in object.restrictedTraverse('@@get_interfaces')()</property>
+            <property name="permissions">
+                <element value="Modify portal content"/>
+            </property>
+            <property name="visible">True</property>
+        </object>
+
     </object>
 </object>
 
